--- a/src/app/App.css
+++ b/src/app/App.css
@@ -5009,7 +5009,8 @@ a.thumbnail {
     flex-direction: column-reverse; } }
 
 body {
-  font-family: 'Questrial', sans-serif; }
+  font-family: 'Questrial', sans-serif;
+  color: #2d3436; }
 
 h1,
 h2,
@@ -5017,7 +5018,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Varela Round', sans-serif; }
+  font-family: 'Varela Round', sans-serif;
+  color: #2c3e50; }
 
 a {
   color: #34495e;
@@ -5027,13 +5029,14 @@ a {
   -o-transition: all 0.25s ease;
   transition: all 0.25s ease;
   transition-property: color, background-color; }
-  a.button {
-    color: #ecf0f1;
-    background-color: #34495e; }
-    a.button:hover, a.button:active, a.button:focus {
-      background-color: #2c3e50; }
   a:hover, a:active, a:focus {
-    color: #2c3e50; }
+    color: #6386a9; }
+
+.button {
+  color: #ecf0f1;
+  background-color: #34495e; }
+  .button:hover, .button:active, .button:focus {
+    background-color: #2c3e50; }
 
 .application-body {
   width: 100%;
@@ -5102,8 +5105,8 @@ a {
     margin-bottom: 5px; }
     .navigation .nav-links a {
       color: #dfe6e9; }
-      .navigation .nav-links a:hover, .navigation .nav-links a:active, .navigation .nav-links a:focus {
-        color: #2980b9; }
+      .navigation .nav-links a:hover {
+        color: #7e9bb7 !important; }
     .navigation .nav-links svg {
       font-size: 1.25rem;
       display: block;
@@ -5134,6 +5137,8 @@ a {
       @media (min-width: 900px) {
         .navigation .home-link .home-label {
           font-size: 1.8rem; } }
+    .navigation .home-link.active-item {
+      color: #91aac2; }
     @media print, screen and (min-width: 40em) {
       .navigation .home-link {
         width: 100%;
@@ -5157,6 +5162,7 @@ a {
     .navigation .category-list .category-item {
       text-align: center; }
       .navigation .category-list .category-item .category-link .category-name {
+        text-transform: capitalize;
         font-size: .95rem; }
         @media print, screen and (min-width: 40em) {
           .navigation .category-list .category-item .category-link .category-name {
@@ -5170,6 +5176,8 @@ a {
           display: flex;
           justify-content: flex-start;
           align-items: center; } }
+      .navigation .category-list .category-item.active-item .category-link {
+        color: #91aac2; }
     @media print, screen and (min-width: 40em) {
       .navigation .category-list {
         width: 100%;
@@ -5322,48 +5330,6 @@ a {
   padding: 15px;
   padding-bottom: 60px; }
   @media print, screen and (min-width: 40em) {
-    .main-content-area .main-content-header {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      justify-content: space-between; } }
-  .main-content-area .main-content-area-title h1 {
-    font-size: 1.45rem;
-    text-align: center;
-    margin-bottom: 15px; }
-    @media print, screen and (min-width: 40em) {
-      .main-content-area .main-content-area-title h1 {
-        font-size: 1.2rem; } }
-    @media (min-width: 800px) {
-      .main-content-area .main-content-area-title h1 {
-        font-size: 1.8rem; } }
-    @media print, screen and (min-width: 64em) {
-      .main-content-area .main-content-area-title h1 {
-        font-size: 2.2rem; } }
-    @media screen and (min-width: 75em) {
-      .main-content-area .main-content-area-title h1 {
-        font-size: 3.2rem; } }
-    @media (min-width: 1400px) {
-      .main-content-area .main-content-area-title h1 {
-        font-size: 3.6rem; } }
-  .main-content-area .post-sorting {
-    width: 100%;
-    display: block;
-    margin-bottom: 25px; }
-    @media print, screen and (min-width: 40em) {
-      .main-content-area .post-sorting {
-        max-width: 225px;
-        margin: 0 0 0 auto; } }
-    @media (min-width: 900px) {
-      .main-content-area .post-sorting {
-        max-width: 275px; } }
-    @media print, screen and (min-width: 64em) {
-      .main-content-area .post-sorting {
-        max-width: 350px; } }
-    @media (min-width: 1450px) {
-      .main-content-area .post-sorting {
-        max-width: 400px; } }
-  @media print, screen and (min-width: 40em) {
     .main-content-area {
       width: 70%;
       margin-left: 30%;
@@ -5375,14 +5341,60 @@ a {
       margin-left: 270px;
       max-width: 1400px; } }
 
-.post-sorting-controls {
+@media print, screen and (min-width: 40em) {
+  .post-list .post-list-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-between; } }
+
+.post-list .post-list-title h1 {
+  font-size: 1.45rem;
+  text-align: center;
+  margin-bottom: 15px; }
+  @media print, screen and (min-width: 40em) {
+    .post-list .post-list-title h1 {
+      font-size: 1.2rem;
+      text-align: left; } }
+  @media (min-width: 800px) {
+    .post-list .post-list-title h1 {
+      font-size: 1.8rem; } }
+  @media print, screen and (min-width: 64em) {
+    .post-list .post-list-title h1 {
+      font-size: 2.2rem; } }
+  @media screen and (min-width: 75em) {
+    .post-list .post-list-title h1 {
+      font-size: 3.2rem; } }
+  @media (min-width: 1400px) {
+    .post-list .post-list-title h1 {
+      font-size: 3.6rem; } }
+
+.post-list .item-sorting {
+  width: 100%;
+  display: block;
+  margin-bottom: 25px; }
+  @media print, screen and (min-width: 40em) {
+    .post-list .item-sorting {
+      max-width: 225px;
+      margin: 0 0 0 auto; } }
+  @media (min-width: 900px) {
+    .post-list .item-sorting {
+      max-width: 275px; } }
+  @media print, screen and (min-width: 64em) {
+    .post-list .item-sorting {
+      max-width: 350px; } }
+  @media (min-width: 1450px) {
+    .post-list .item-sorting {
+      max-width: 400px; } }
+
+.item-sorting-controls {
   display: flex;
   justify-content: center;
   align-items: center;
   align-items: stretch;
   margin-bottom: 15px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); }
-  .post-sorting-controls .post-sorting-label {
+  .item-sorting-controls .item-sorting-label {
     width: 100px;
     display: block;
     background: #34495e;
@@ -5392,12 +5404,12 @@ a {
     align-items: center;
     font-weight: bold; }
     @media print, screen and (min-width: 40em) {
-      .post-sorting-controls .post-sorting-label {
+      .item-sorting-controls .item-sorting-label {
         width: 150px; } }
     @media print, screen and (min-width: 64em) {
-      .post-sorting-controls .post-sorting-label {
+      .item-sorting-controls .item-sorting-label {
         width: 175px; } }
-  .post-sorting-controls .post-sorting-selector {
+  .item-sorting-controls .item-sorting-selector {
     margin-bottom: 0;
     border: none;
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='32' height='24' viewBox='0 0 32 24'><polygon points='0,0 32,0 16,24' style='fill: rgb%2844, 62, 80%29'></polygon></svg>");
@@ -5417,6 +5429,10 @@ a {
       .post-item .post-details {
         padding: 15px;
         width: calc(100% - 75px); } }
+    @media print, screen and (min-width: 64em) {
+      .post-item .post-details {
+        padding: 20px;
+        padding-left: 30px; } }
   @media print, screen and (min-width: 40em) {
     .post-item .post-controls-wrapper {
       width: 75px;
@@ -5470,7 +5486,11 @@ a {
     font-size: .95rem;
     line-height: 1.4; }
     .post-item .post-excerpt .excerpt {
-      margin-bottom: 3px; }
+      margin-bottom: 10px; }
+    .post-item .post-excerpt .post-link {
+      text-transform: uppercase;
+      font-weight: bold;
+      margin-bottom: 0; }
     @media (min-width: 850px) {
       .post-item .post-excerpt {
         font-size: 1.15rem; } }
@@ -5654,7 +5674,7 @@ a {
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        padding: 5px; } }
+        padding: 10px 5px 5px; } }
 
 .footer {
   width: 100%;
