--- a/src/components/main-content/list-posts/post-item/_post-item.scss
+++ b/src/components/main-content/list-posts/post-item/_post-item.scss
@@ -9,6 +9,10 @@
 			padding:15px;
 			width:calc(100% - 75px);
 		}
+		@include breakpoint(large) {
+			padding:20px;
+			padding-left:30px;
+		}
 	}
 	.post-controls-wrapper {
 		@include breakpoint(medium) {
@@ -72,7 +76,12 @@
 		font-size:.95rem;
 		line-height:1.4;
 		.excerpt {
-			margin-bottom:3px;
+			margin-bottom:10px;
+		}
+		.post-link {
+			text-transform:uppercase;
+			font-weight:bold;
+			margin-bottom:0;
 		}
 		@media (min-width:850px) {
 			font-size:1.15rem;
