--- a/src/components/main-content/post-controls/post-voting/_post-voting.scss
+++ b/src/components/main-content/post-controls/post-voting/_post-voting.scss
@@ -43,7 +43,7 @@
 			@include flex();
 			@include flex-align(center, middle);
 			flex-direction:column;
-			padding:5px;
+			padding:10px 5px 5px;
 		}
 	}
 }
