--- a/src/components/nav/_navigation.scss
+++ b/src/components/nav/_navigation.scss
@@ -33,8 +33,8 @@
 		margin-bottom:5px;
 		a {
 			color:$secondary-white;
-			&:hover, &:active, &:focus {
-				color:$secondary-light-blue;
+			&:hover {
+				color: lighten($primary-blue, 32%) !important;
 			}
 		}
 		svg {
@@ -70,6 +70,9 @@
 				font-size:1.8rem;
 			}
 		}
+		&.active-item {
+			color: lighten($primary-blue, 38%);
+		}
 		@include breakpoint(medium) {
 			width:100%;
 			margin-bottom:15px;
@@ -93,6 +96,7 @@
 			text-align:center;
 			.category-link {
 				.category-name {
+					text-transform:capitalize;
 					font-size:.95rem;
 					@include breakpoint(medium) {
 						font-size:1.4rem;
@@ -105,6 +109,11 @@
 					margin-bottom:15px;
 					@include flex();
 					@include flex-align(left, middle);
+				}
+			}
+			&.active-item {
+				.category-link {
+					color: lighten($primary-blue, 38%);
 				}
 			}
 		}
