--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -16,6 +16,7 @@
 @import "../components/main-content/list-posts/list-posts";
 @import "../components/main-content/list-posts/sort-items/sort-items";
 @import "../components/main-content/list-posts/post-item/post-item";
+@import "../components/main-content/single-post/single-post.scss";
 @import "../components/main-content/post-controls/post-controls";
 @import "../components/main-content/post-controls/comments-count/comments-count";
 @import "../components/main-content/post-controls/delete-post/delete-post";
