--- a/src/components/main-content/list-posts/_list-posts.scss
+++ b/src/components/main-content/list-posts/_list-posts.scss
@@ -11,6 +11,7 @@
 			font-size:1.45rem;
 			text-align:center;
 			margin-bottom:15px;
+			text-transform:capitalize;
 			@include breakpoint(medium) {
 				font-size:1.2rem;
 				text-align:left;
@@ -45,6 +46,21 @@
 		}
 		@media (min-width:1450px) {
 			max-width:400px;
+		}
+	}
+	.no-posts-available {
+		font-size:1rem;
+		.category {
+			text-transform:capitalize;
+		}
+		@include breakpoint(medium) {
+			font-size:1.2rem;
+		}
+		@include breakpoint(large) {
+			font-size:1.4rem;
+		}
+		@include breakpoint(xlarge) {
+			font-size:1.6rem;
 		}
 	}
 }
