--- a/src/components/main-content/list-posts/post-item/_post-item.scss
+++ b/src/components/main-content/list-posts/post-item/_post-item.scss
@@ -14,7 +14,7 @@
 			padding-left:30px;
 		}
 	}
-	.post-controls-wrapper {
+	.user-controls-wrapper {
 		@include breakpoint(medium) {
 			width:75px;
 			min-height:275px;
