--- a/src/components/main-content/user-controls/_user-controls.scss
+++ b/src/components/main-content/user-controls/_user-controls.scss
@@ -1,4 +1,4 @@
-.post-controls {
+.user-controls {
 	width:100%;
 	height:auto;
 	min-height:55px;
@@ -23,6 +23,9 @@
 			height:22%;
 			padding:5px;
 		}
+	}
+	a {
+		color:$primary-white;
 	}
 	.control-icon-box {
 		position: relative;
